# real-time-analysis

./: .gitignore  .replit  README.md  app.py  rag_retriever.py  requirements.txt
MediaStreamFixer/: .replit  analysis_module.py  app.py  main.py  pyproject.toml  replit.md  requirements.txt
MediaStreamFixer/attached_assets/: Pasted-Persona-You-are-a-senior-full-stack-Python-developer-with-expert-level-skills-in-Flask-API-design--1752505598203_1752505598204.txt
MediaStreamFixer/processed/: chairhold_demo_-_Made_with_Clipchamp_1752640339_corrected.json  chairhold_demo_-_Made_with_Clipchamp_1752640784_corrected.json  chairhold_demo_-_Made_with_Clipchamp_1752646623_corrected.json  chairhold_demo_-_Made_with_Clipchamp_1752647571_corrected.json  chairhold_demo_-_Made_with_Clipchamp_1752647933_corrected.json  plank_-_Made_with_Clipchamp_1752640881_corrected.json  plank_-_Made_with_Clipchamp_1752641267_corrected.json  plank_-_Made_with_Clipchamp_1752644346_corrected.json  plank_-_Made_with_Clipchamp_1752645089_corrected.json  plank_-_Made_with_Clipchamp_1752646267_corrected.json  pushups_demo_1752638629_corrected.json  pushups_demo_1752651798_corrected.json  singlelegbalance_demo_-_Made_with_Clipchamp_1752648446_corrected.json  singlelegbalance_demo_-_Made_with_Clipchamp_1752649023_corrected.json  singlelegbalance_demo_-_Made_with_Clipchamp_1752651588_corrected.json  situps_demo_-_Made_with_Clipchamp_1752639475_corrected.json  squats_demo_-_Made_with_Clipchamp_1752638810_corrected.json
MediaStreamFixer/static/: app.js  results.js  style.css
api/: routes.py
static/: app.js  (+2 more)
(+61 files in other folders)
